GNOME Bugzilla – Bug 757595
vaapidecodebin: fix a leaked display instance
Last modified: 2015-11-09 14:55:28 UTC
The display returned by gst_vaapi_video_context_get_display() increments the references. Thus, we have to unref the returned display. Signed-off-by: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com>
Created attachment 314837 [details] [review] vaapidecodebin: fix a leaked display instance
Attachment 314837 [details] pushed as a2611b7 - vaapidecodebin: fix a leaked display instance